[package]
name = "rust_ytdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
qstring = "0.7.2"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde_json = "1.0.127"
